--- a/miniprogram-4/components/Tabs/Tabs.wxml
+++ b/miniprogram-4/components/Tabs/Tabs.wxml
@@ -1,2 +1,8 @@
-<!--components/Tabs/Tabs.wxml-->
-<text>components/Tabs/Tabs.wxml</text>
+<!-- components/Tabs/Tabs.wxml -->
+<view class="tabs">
+    <view class="tabs-title">
+        <view class="title-item active">我的收藏</view>
+        <view class="title-item">我的作品</view>
+    </view>
+    <view class="tabs-content">内容</view>
+</view>
