--- a/miniprogram-4/components/Tabs/Tabs.wxss
+++ b/miniprogram-4/components/Tabs/Tabs.wxss
@@ -1,1 +1,25 @@
 /* components/Tabs/Tabs.wxss */
+/* .tabs{
+
+} */
+.tabs-title{
+    display: flex;
+}
+.title-item{
+    flex: 1;
+    display: flex;
+    height: 96rpx;
+    background-color: #cfe1f4;
+    border-radius: 24rpx;
+    justify-content: center;
+    align-items: center;
+}
+/* 激活选中效果 */
+.active{
+    color: #4F73A5;
+    background-color: #fff;
+    border-bottom: 14rpx solid #cfe1f4;
+}
+/* .tabs-content{
+
+} */
