--- a/pages/market/market.wxml
+++ b/pages/market/market.wxml
@@ -4,21 +4,28 @@
     <view class="img-box box1">
         <text class="tag">雕塑</text>
         <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo1' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
     <view class="img-box box2">
         <text class="tag">雕塑</text>
         <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo2' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
     <view class="img-box box3">
         <text class="tag">雕塑</text>
         <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo3' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
     <view class="img-box box4">
         <text class="tag">雕塑</text>
         <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo4' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
     <view class="img-box box5">
         <text class="tag">雕塑</text>
-        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <navigator url="../../pages/art-recommend/art-recommend">
+            <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        </navigator>
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo5' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
 </view>
