--- a/pages/test2/test2.wxml
+++ b/pages/test2/test2.wxml
@@ -1,4 +1,4 @@
-<!-- pages/switch-more/switch-more.wxml -->
+<!-- pages/test2/test2.wxml -->
 <view class="art-recommend-box">
     <view class="main-title-box">我的艺术定制</view>
     <view class="main-body">
