--- a/pages/market/market.wxss
+++ b/pages/market/market.wxss
@@ -1,12 +1,18 @@
 /* pages/market/market.wxss */
 page{
     background-color: #041746;
-}
-.art-recommend-box{
+  }
+  .bg-img{
+    position: absolute;
+    border-radius: 24rpx;
+    width: 300px;
+    height: 150px;
+  }
+  .art-recommend-box{
     margin: 0 48rpx 0rpx 48rpx;
     height: 100%;
-}
-.title-box{
+  }
+  .title-box{
     margin: 20rpx auto;
     text-align: center;
     background-color: #4F73A5;
@@ -18,63 +24,66 @@ page{
     font-size: 24rpx;
     line-height: 82rpx;
     color: #fff;
-}
-.img-box{
+  }
+  .img-box{
     margin-bottom: 100rpx;
-}
-image{
+    display: flex;
+    position: absolute;
+  }
+  .img-box .recommend-pic{
     border-radius: 24rpx;
     box-shadow: 0 6rpx 10rpx #000;
-    color: #F0F0F0;
-    filter: blur(10rpx) brightness(85%);
-}
-.box1{
+  }
+  .scratch-canvas{
     position: absolute;
+    color: #f0f0f0;
+    border-radius: 24rpx;
+    box-shadow: 0 6rpx 10rpx #000;
+    filter: blur(10rpx) brightness(80%) opacity(80%);
+  }
+  .box1{
     left:318rpx;
     top: 186rpx;
-}
-.box1 .recommend-pic{
+  }
+  
+  .box1 .recommend-pic, .box1 .scratch-canvas{
     height: 248rpx;
     width: 240rpx;
-}
-.box2{
-    position: absolute;
+  }
+  .box2{
     left:150rpx;
     top: 306rpx;
     z-index: -1;
-}
-.box2 .recommend-pic{
+  }
+  .box2 .recommend-pic,.box2 .scratch-canvas{
     height: 370rpx;
     width: 390rpx;
-}
-.box3{
-    position: absolute;
+  }
+  .box3{
     left:438rpx;
     top: 434rpx;
-}
-.box3 .recommend-pic{
+  }
+  .box3 .recommend-pic,.box3 .scratch-canvas{
     height: 300rpx;
     width: 216rpx;
-}
-.box4{
-    position: absolute;
+  }
+  .box4{
     left:178rpx;
     top: 842rpx;
-}
-.box4 .recommend-pic{
+  }
+  .box4 .recommend-pic,.box4 .scratch-canvas{
     height: 500rpx;
     width: 460rpx;
-}
-.box5{
-    position: absolute;
+  }
+  .box5{
     top: 1098rpx;
-}
-.box5 .recommend-pic{
+  }
+  .box5 .recommend-pic,.box5 .scratch-canvas{
     height: 390rpx;
     width: 400rpx;
-}
-.tag{
-    z-index: 1;
+  }
+  .tag{
+    z-index: 10;
     position: absolute;
     opacity: 90%;
     border: 1rpx solid #4F73A5;
@@ -85,10 +94,7 @@ image{
     background-color: #f0f0f0;
     color: #4F73A5;
     border-radius: 16rpx;
+  } 
+.recommend-pic{
+  margin-right: 40rpx;
 }
-/* .img-filter{
-    height: 390rpx;
-    width: 400rpx;
-    color: #F0F0F0;
-    filter: blur(30rpx) brightness(85%);
-} */
