--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -1,96 +1,37 @@
 <!-- pages/test/test.wxml -->
 <!-- canvas.wxml -->
-<view class="areo-history-track">
-    <view class="history-block">
-        <view class="scroll-line"></view>
-        <view class="scroll-dot"></view>
-        <view class="date">一天前</view>
-        <scroll-view class="history-scroll" scroll-x="true" bindscroll="">
-            <view class="history-item">
-                <view class="pic-box">
-                    <text class="tag">雕塑</text>
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <text class="tag">雕塑</text>
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <text class="tag">雕塑</text>
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <text class="tag">雕塑</text>
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-        </scroll-view>
+<!-- <canvas class="scratch_do_in" disable-scroll="false" canvas-id='canvas-demo' ></canvas> -->
+<!-- <view class="scratch_body">
+    <view class="scratch-img">
+        <image class="bg-img" src="../../images/album.jpg" mode="scaleToFill" />
     </view>
-    <view class="history-block">
-        <view class="scroll-line"></view>
-        <view class="scroll-dot"></view>
-        <view class="date">一天前</view>
-        <scroll-view class="history-scroll" scroll-x="true" bindscroll="">
-            <view class="history-item">
-                <view class="pic-box">
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-            <view class="history-item">
-                <view class="pic-box">
-                    <image class="pic" src="../../images/album.jpg" />
-                </view>
-                <view class="text-box">
-                    <text class="intro">欧初捐赠文物纪念展”分为“诸家“历代陶瓷”、“文房用品”和“青铜器”四个篇章。</text>
-                </view>
-            </view>
-        </scroll-view>
+    <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+</view> -->
+<view class="art-recommend-box">
+    <view class="title-box">我的艺术定制</view>
+    <view class="img-box box1">
+        <text class="tag">雕塑</text>
+        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo1' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+    </view>
+    <view class="img-box box2">
+        <text class="tag">雕塑</text>
+        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo2' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+    </view>
+    <view class="img-box box3">
+        <text class="tag">雕塑</text>
+        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo3' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+    </view>
+    <view class="img-box box4">
+        <text class="tag">雕塑</text>
+        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo4' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
+    </view>
+    <view class="img-box box5">
+        <text class="tag">雕塑</text>
+        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+        <canvas class="scratch-canvas" disable-scroll="false" canvas-id='canvas-demo5' bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd"></canvas>
     </view>
 </view>
-<view class="areo-bottom">......已经到底啦......</view>
-<canvas canvas-id="myCanvas" style="margin: 5px; border:1px solid #d3d3d3;" bindtouchstart="start" bindtouchmove="move" bindtouchend="end" />
-<view hidden="{{hidden}}">Coordinates: ({{x}}, {{y}})</view>
-<scroll-view class="scroll-box" scroll-x scroll-with-animation scroll-into-view="{{toView}}" bindtouchstart="touchStart" bindtouchend="touchEnd">
-    <view wx:for="{{list}}" wx:key="{{item}}" class="card-box" id="card_{{index}}">
-        <view class="card">
-            <text>{{item}}</text>
-        </view>
-    </view>
-</scroll-view>
