--- a/pages/test/test.wxss
+++ b/pages/test/test.wxss
@@ -1,123 +1,98 @@
-/* pages/test/test.wxss */
-/* page{
-    overflow: hidden;
-    background: #0D1740;
-  } */
-  .areo-history-track{
-    padding-left: 48rpx;
+page{
+  background-color: #041746;
 }
-.history-block{
-    display: flex;
-}
-.history-block .scroll-line{
-    display: inline-block;
-    width: 4rpx;
-    height: 350rpx;
-    background-color: #5F83B1;
-    margin-right: 22rpx;
-}
-.history-block .scroll-dot{
-  background-color: #006FFF;
-  width: 10rpx;
-  height: 10rpx;
+.bg-img{
   position: absolute;
-  margin-top: 138rpx;
+  border-radius: 24rpx;
+  width: 300px;
+  height: 150px;
 }
-.history-block .date{
-    position: absolute;
-    width: 100%;
-    height: 56rpx;
-    margin-left: 30rpx;
-    text-align: start;
-    color: #8E8E8E;
-    line-height: 56rpx;
-    font-size: 20rpx;
+.art-recommend-box{
+  margin: 0 48rpx 0rpx 48rpx;
+  height: 100%;
 }
-.history-block .history-scroll
-{
-  position: absolute;
-  margin: 60rpx 0 0 30rpx; 
+.title-box{
+  margin: 20rpx auto;
+  text-align: center;
+  background-color: #4F73A5;
+  width: 560rpx;
+  height: 82rpx;
+  border-radius: 42rpx;
+  box-shadow: 0 0 8rpx #4F73A5;
+  opacity: 53%;
+  font-size: 24rpx;
+  line-height: 82rpx;
+  color: #fff;
+}
+.img-box{
+  margin-bottom: 100rpx;
   display: flex;
-  overflow: hidden;
-  white-space: nowrap;
+  position: absolute;
 }
-.history-item{
-    display: inline-block;
-    text-align: center;
-    margin-right: 36rpx;
+.img-box .recommend-pic{
+  border-radius: 24rpx;
+  box-shadow: 0 6rpx 10rpx #000;
 }
-.history-item .pic-box{
-    height: 142rpx;
-    display: flex;
-    flex-flow: row-reverse;
+.scratch-canvas{
+  position: absolute;
+  color: #f0f0f0;
+  border-radius: 24rpx;
+  box-shadow: 0 6rpx 10rpx #000;
+  filter: blur(10rpx) brightness(80%) opacity(80%);
 }
-.history-item .pic-box .tag{
-    position: absolute;
-    opacity: 38%;
-    box-shadow: 0 6rpx 12rpx #000;
-    font-size: 16rpx;
-    line-height: 32rpx;
-    padding: 0 28rpx 0 28rpx;
-    height: 32rpx;
-    background-color: #f0f0f0;
-    color: #000;
-    border-radius: 16rpx;
-}
-.history-item image{
-    width: 274rpx;
-    height: 184rpx;
-    border-radius: 20rpx;
-    box-shadow: 0rpx 6rpx 6rpx #738eae, -6rpx 0 6rpx #738eae, 5rpx 0 5rpx #738eae;
+.box1{
+  left:318rpx;
+  top: 186rpx;
 }
 
-.history-item .text-box{
-    z-index: -1;
-    height: 126rpx;
-    width: 284rpx;
-    padding-top: 54rpx;
-    box-sizing: border-box;
-    white-space: normal !important;
-    /* border-width: 4rpx; */
-    background-color: rgb(235, 243, 252);
-    border-color: rgb(45, 112, 231);
-    border-bottom-left-radius: 34rpx;
-    border-bottom-right-radius: 34rpx;
+.box1 .recommend-pic, .box1 .scratch-canvas{
+  height: 248rpx;
+  width: 240rpx;
 }
-.history-item .intro{
-    display: -webkit-box;
-    padding: 0 18rpx 0 18rpx;
-    height: 60rpx;
-    line-height: 30rpx;
-    font-size: 16rpx;
-    overflow: hidden;
-    -webkit-line-clamp: 2;
-    text-overflow: ellipsis;
+.box2{
+  left:150rpx;
+  top: 306rpx;
+  z-index: -1;
 }
-.areo-bottom{
-    margin:20rpx 0 40rpx 0;
-    text-align: center;
-    font-size: 22rpx;
+.box2 .recommend-pic,.box2 .scratch-canvas{
+  height: 370rpx;
+  width: 390rpx;
 }
+.box3{
+  left:438rpx;
+  top: 434rpx;
+}
+.box3 .recommend-pic,.box3 .scratch-canvas{
+  height: 300rpx;
+  width: 216rpx;
+}
+.box4{
+  left:178rpx;
+  top: 842rpx;
+}
+.box4 .recommend-pic,.box4 .scratch-canvas{
+  height: 500rpx;
+  width: 460rpx;
+}
+.box5{
+  top: 1098rpx;
+}
+.box5 .recommend-pic,.box5 .scratch-canvas{
+  height: 390rpx;
+  width: 400rpx;
+}
+.tag{
+  z-index: 10;
+  position: absolute;
+  opacity: 90%;
+  border: 1rpx solid #4F73A5;
+  font-size: 30rpx;
+  line-height: 40rpx;
+  height: 40rpx;    
+  padding: 14rpx 26rpx 14rpx 26rpx;
+  background-color: #f0f0f0;
+  color: #4F73A5;
+  border-radius: 16rpx;
+} 
+  
 
-/* 其他 */
-  .scroll-box{
-    white-space: nowrap;
-    height: 105vh;
-  }
-   
-  .card-box{
-    display: inline-block;
-  }
-   
-  .card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    height: 80vh;
-    width: 80vw;
-    margin: 5vh 10vw;
-    font-size: 40px;
-    background: #F8F2DC;
-    border-radius: 4px;
-  }
