--- a/pages/art-recommend/art-recommend.wxml
+++ b/pages/art-recommend/art-recommend.wxml
@@ -1,9 +1,71 @@
 <!-- pages/art-recommend/art-recommend.wxml -->
 <view class="art-recommend-box">
     <view class="title-box">我的艺术定制</view>
-    <view class="img-box">
-        <text class="tag">雕塑</text>
-        <image class="recommend-pic" src="../../images/recommend-pic.jpg" mode="scaleToFill" />
+    <view class="middle-box">
+        <movable-area class="move-body">
+            <movable-view class="img-box" style="width:{{pic_width*2}}rpx" direction="horizontal" inertia="{{true}}" out-of-bounds="{{true}}" x="1000" bindchange="handlemove">
+                <text class="tag" style="opacity:{{opacity_tag}}">雕塑</text>
+                <image class="recommend-pic" src="../../images/recommend-pic.jpg" style="width:{{pic_width*2}}rpx" mode="aspectFill" />
+            </movable-view>
+        </movable-area>
+        <view class="body-right" style="opacity:{{opacity_right}}">
+            <view class="class-intro">
+                <view class="intro-title">课程介绍</view>
+                <view class="class-detail">
+                    “隐·形”的话题跨越时代和地域空间，又以其普适性、通识性毫无违和感地适用于我们所处的数码世代。此次参展的七位艺术家以各自不同的创作历程、视觉语言、表达方式、技术手段通过绘画、雕塑、摄影、版画、影像.......
+                </view>
+                <view class="click-to-detail">详情</view>
+            </view>
+            <image class="class-img" src="../../images/broadcast.jpg" mode="aspectFill" />
+            <view class="team-intro">
+                <view class="intro-title">团队介绍</view>
+                <view class="team-detail">
+                    “隐·形”的话题跨越时代和地域空间，又以其普适性、通识性毫无违和感地适用于我们所处的数码世代。此次参展的七位艺术家以各自不同的创作历程、视觉语言、表达方式、技术手段通过绘画、雕塑、摄影、版画、影像.......
+                </view>
+                <view class="click-to-detail">详情</view>
+            </view>
+            <view class="enter">Enter></view>
+        </view>
+        <view class="body-left" style="opacity:{{opacity_left}}">
+            <view class="comment-title">热门评论</view>
+            <view class="comment">
+                <!-- 首个评论详情高度不同 -->
+                <view class="comment-item">
+                    <view class="user-box">
+                        <image class="user-img" src="../../images/user-image.jpg" mode="scaleToFill" />
+                        <text class="user-name">草间弥生</text>
+                    </view>
+                    <view class="content isTopComment">
+                        “隐·形”的话题跨越时代和地域空间，又以其普适性、通识性毫无违和感地适用于我们所处的数码世代。此次参展的七位艺术家以各自不同的创作历程、视觉语言、表达方式、技术手段通过绘画、雕塑、摄影、版画、影像.......
+                    </view>
+                </view>
+            </view>
+            <view class="comment">
+                <view class="comment-item">
+                    <view class="user-box">
+                        <image class="user-img" src="../../images/user-image.jpg" mode="scaleToFill" />
+                        <text class="user-name">草间弥生</text>
+                    </view>
+                    <view class="content ">
+                        “隐·形”的话题跨越时代和地域空间，又以其普适性、通识性毫无违和感地适用于我们所处的数码世代。此次参展的七位艺术家以各自不同的创作历程、视觉语言、表达方式、技术手段通过绘画、雕塑、摄影、版画、影像.......
+                    </view>
+                </view>
+            </view>
+            <view class="comment">
+                <view class="comment-item">
+                    <view class="user-box">
+                        <image class="user-img" src="../../images/user-image.jpg" mode="scaleToFill" />
+                        <text class="user-name">草间弥生</text>
+                    </view>
+                    <view class="content ">
+                        “隐·形”的话题跨越时代和地域空间，又以其普适性、通识性毫无违和感地适用于我们所处的数码世代。此次参展的七位艺术家以各自不同的创作历程、视觉语言、表达方式、技术手段通过绘画、雕塑、摄影、版画、影像.......
+                    </view>
+                </view>
+            </view>
+            <view class="enter">Enter></view>
+        </view>
     </view>
-    <view class="slide">左右滑动查看更多</view>
+    <view class="slide" bindtouchstart="handletouchstart" bindtouchmove="handletouchmove" style="opacity:{{opacity_tag}}">
+        左右滑动查看更多
+    </view>
 </view>
