--- a/pages/art-recommend/art-recommend.wxss
+++ b/pages/art-recommend/art-recommend.wxss
@@ -20,8 +20,24 @@ page{
     line-height: 82rpx;
     color: #fff;
 }
+.middle-box{
+    position: relative;
+    width: 100%;
+    height: 962rpx;
+}
+movable-area{
+    width: 654rpx;
+    position: absolute;
+    height: 968rpx;
+}
+movable-view{
+    z-index: 10;
+    width: 208rpx;
+    top: auto;
+    left: 0;
+}
 .img-box{
-    display: flex;
+    position: absolute;
 }
 .tag{
     position: absolute;
@@ -39,11 +55,107 @@ page{
     border-radius: 24rpx;
     border: 2rpx solid #707070;
     height: 962rpx;
+    width: 654rpx;
+}
+.body-right{
+    position: absolute;
+    top: auto;
+    right: 0;
+    width: 386rpx;
+}
+.intro-title{
+    color: #006fff;
+    font-size: 18rpx;
+    line-height: 24rpx;
+    margin-bottom: 28rpx;
+}
+.class-detail{
+    color: #A9B5C9;
+    font-size: 28rpx;
+    line-height: 56rpx;
+    height: 120rpx;
+    overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 28rpx;
+}
+.class-img{
+    /* flex: 1; */
+    height: 208rpx;
     width: 100%;
+    box-shadow: 0 6rpx 10rpx #000;
+    border-radius: 24rpx;
+    margin-bottom: 80rpx;
+}
+.team-detail{
+    font-size: 28rpx;
+    color: #A9B5C9;
+    line-height: 56rpx;
+    height: 156rpx;
+    overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 26rpx;
+}
+.click-to-detail{
+    font-size: 16rpx;
+    line-height: 22rpx;
+    color: #006fff;
+    margin-bottom: 82rpx;
+    text-align: end;
+}
+.body-left{
+    width: 386rpx;
+    position: absolute;
+    top: auto;
+    left: 0;
+}
+.comment-title{
+    color: #006FFF;
+    line-height: 38rpx;
+    height: 39rpx;
+    font-size: 28rpx;
+    margin-bottom: 38rpx;
+}
+.comment-item{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #A9B5C9;
+}
+.user-box{
+    display: flex;
+    margin-bottom: 24rpx;
+}
+.user-img{
+    width: 76rpx;
+    height: 76rpx;
+    border-radius: 24rpx;
+    box-shadow: 0 6rpx 10rpx #000;
+}
+.user-name{
+    font-size: 28rpx;
+    line-height: 56rpx;
+    height: 56rpx;
+    padding: 10rpx 0 10rpx 42rpx;
+}
+.content{
+    line-height: 56rpx;
+    font-size: 24rpx;
+    overflow: hidden;
+    height: 160rpx; 
+    margin-bottom: 46rpx;  
+}
+.isTopComment{
+    height: 102rpx;
+}
+.enter{
+    /* flex: 1; */
+    color: #fff;
+    font-size: 24rpx;
+    line-height: 32rpx;
+    height: 32rpx;
+    text-align: end;
 }
 .slide{
     color: #fff;
     text-align: center;
     font-size: 26rpx;
-    margin: 40rpx 0 36rpx 0;
+    padding: 40rpx 0 36rpx 0;
 }
